[package]
name = "eventbus_util"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tools for using Vert.X eventbus bridge with tokio."
repository = "https://github.com/whitemay/eventbus-util"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-rt = "2.8"
bytes = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "*"
tokio-util = { version = "0.7.8", features = ["codec"] }

[lib]
name = "eventbus_util"
path = "src/lib.rs"
